fixed banner on mobiles

--- a/styles/components/baner.css
+++ b/styles/components/baner.css
@@ -1,3 +1,12 @@
+.baner{
+    background-image: url('../../images/cover_photo.png');
+    width: 100%;
+    height: 95vh;
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 .baner__photo{
     width: 100%;
     max-height: 100%;
@@ -174,19 +183,25 @@ znalazłem inne, działające rozwiązanie*/
 @media (min-width: 1px) and (max-width: 480px) {
     .baner-text{
         font-size: 10px;
-        top: 5px;
+        /*top: 5px; */
     }
     .baner-text__header{
         line-height: 3rem;
+    }
+    .baner{
+        height: 70vh;
     }
 }
 
 @media (min-width: 481px) and (max-width: 768px){
     .baner-text{
         font-size: 12px;
-        top: 5px;
+       /* top: 5px; */
     }
     .baner-text__header{
         line-height: 5rem;
+    }
+    .baner{
+        height: 70vh;
     }
 }
